--- a/unit_test/README
+++ b/unit_test/README
@@ -4,7 +4,7 @@ The run.sh script is currently configured to test the 4_64 and 4_64_DA builds
 of NCEP BUFRLIB on the NCEP WCOSS, but it can likely be easily configured to
 test builds on other systems as well.
 
-The build to be tested is specified in the script as variable $BUFRLIB.  When
+The build to be tested is specified as environment variable $BUFRLIB.  When
 the script is run, numerous test programs are compiled with this build and
 then executed, and the output of each program is then automatically compared
 against corresponding saved output in the testfiles subdirectory.  All results
