--- a/utilities/debufr/modulefiles/v2.2.1
+++ b/utilities/debufr/modulefiles/v2.2.1
@@ -2,12 +2,14 @@
 ##
 proc ModulesHelp { } {
         puts stderr "This module initializes the environment to build"
-        puts stderr "v2.2.0 of the NCEP debufr utility."
+        puts stderr "v2.2.1 of the NCEP debufr utility."
 }
 
+conflict debufr
+
 set sys         [uname sysname]
-set ver v2.2.0
+set ver v2.2.1
 set COMP intel
 
 #Loading NCEP library modules
-module load bufr/11.0.0
+module load bufr/v11.2.0
